// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Time 5 Minutes early 1`] = `
.emotion-0 {
  font-size: 0.9em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  font-size: 0.9em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  font-size: 0.9em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 {
  margin-right: .2em;
}

.emotion-1 {
  margin-right: .2em;
}

.emotion-1 {
  margin-right: .2em;
}

.emotion-2 {
  margin-right: .2em;
  color: #7cb342;
}

<div
  class="emotion-0"
  data-testid="timeContainer"
>
  <span
    class="emotion-1"
    data-testid="timeToDisplay"
  >
    14:00
  </span>
  <span
    class="emotion-2"
    data-testid="realTimeOrDelay"
  >
    13:55
  </span>
</div>
`;

exports[`Time 10 Minutes delay 1`] = `
.emotion-0 {
  font-size: 0.9em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  font-size: 0.9em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 {
  margin-right: .2em;
}

.emotion-1 {
  margin-right: .2em;
}

.emotion-2 {
  margin-right: .2em;
  color: #ff1744;
}

<div
  class="emotion-0"
  data-testid="timeContainer"
>
  <span
    class="emotion-1"
    data-testid="timeToDisplay"
  >
    13:45
  </span>
  <span
    class="emotion-2"
    data-testid="realTimeOrDelay"
  >
    13:55
  </span>
</div>
`;

exports[`Time no time 1`] = `null`;

exports[`Time shows 0 delay number 1`] = `
.emotion-0 {
  font-size: 0.9em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  font-size: 0.9em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  font-size: 0.9em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  font-size: 0.9em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 {
  margin-right: .2em;
}

.emotion-1 {
  margin-right: .2em;
}

.emotion-1 {
  margin-right: .2em;
}

.emotion-1 {
  margin-right: .2em;
}

.emotion-2 {
  margin-right: .2em;
  color: #7cb342;
}

.emotion-2 {
  margin-right: .2em;
  color: #7cb342;
}

<div
  class="emotion-0"
  data-testid="timeContainer"
>
  <span
    class="emotion-1"
    data-testid="timeToDisplay"
  >
    13:55
  </span>
  <span
    class="emotion-2"
    data-testid="realTimeOrDelay"
  >
    13:55
  </span>
</div>
`;
